# cli

./: README.md  notes.md  pyproject.toml  setup.sh
.astroagent/: context.md
.astroagent/artifacts/: 3d_bar_chart.html  3d_bar_chart_fixed.html  3d_bar_chart_sales_by_product.html  3d_bar_chart_sales_with_axes.html  3d_bar_chart_sales_with_axes_labels.html  3d_sales_chart.html  sales_bar_chart.html  sales_by_product.html  sales_by_product_with_average.html
agent/: agent.py  cli.py  config.py  context.py  display.py  orchestrator.py  schema.py  session.py  settings.py  theme.py
agent/memory/: __init__.py  embedder.py  retriever.py  store.py
agent/sandbox/: __init__.py  python_executor.py  sql_executor.py
agent/tools/: __init__.py
agent/tools/internal/: __init__.py  context_tools.py  inspect_platform.py  inspect_schema.py  run_python.py  run_sql.py
agent/tools/output/: __init__.py  render_artifact.py  send_message.py  submit_observation.py  submit_result.py
airflow/: airflow.cfg
sources/analytics/: pageviews.csv
sources/postgres/: products.csv  transactions.csv  users.csv
sources/salesforce/: campaigns.csv
