[project]
name = "mini-data-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apache-airflow>=3.1.2",
    "dbt-duckdb>=1.10.0",
    "duckdb>=1.4.1",
    "openai>=1.0.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "pandas>=2.0.0",
]

[project.scripts]
astro = "agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent"]

[tool.uv]
package = true
